deploy/apps/west-wa-bellevue-m01/imdb/dev/imdb/imdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imdb
  namespace: imdb
  labels:
    app.kubernetes.io/name: imdb
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
  selector:
    matchLabels:
      app: imdb
  template:
    metadata:
      labels:
        app: imdb
    spec:
      containers:
        - name: app
          image: ghcr.io/cse-labs/imdb-app:latest
          imagePullPolicy: Always
          args:
          - --in-memory
          - --zone
          - west-wa
          - --region
          - west
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi

---

apiVersion: v1
kind: Service
metadata:
  name: imdb
  namespace: imdb
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: imdb

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: imdb-vs
  namespace: imdb
spec:
  hosts:
    - "west-wa-bellevue-m01.cseretail.com"
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: imdb
            port:
              number: 8080
